# DropOut

./: .gitignore  .pre-commit-config.yaml  CNAME  Cargo.toml  README.CN.md  README.md  package.json  pnpm-lock.yaml
.cargo/: config.toml
.changes/: config.toml
.github/: copilot-instructions.md  dependabot.yml
.github/agents/: commit.agent.md
.github/instructions/: commit.instructions.md
.github/references/changelog/: keep-a-changelog.md
.github/references/git/: conventional-commit.md
.github/references/utils/: line-format.md
.github/workflows/: check.yml  lint.yml  prek.yml  release.yml  semifold-ci.yaml  test.yml
crates/macros/src/: lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/core/: account_storage.rs  assistant.rs  auth.rs  config.rs  downloader.rs  fabric.rs  forge.rs  game_version.rs  instance.rs  java.rs  manifest.rs  mod.rs  modpack.rs
src-tauri/src/core/java/: cache.rs  detection.rs  error.rs  install.rs  mod.rs  persistence.rs  priority.rs  provider.rs  validation.rs
src-tauri/src/core/java/detection/: common.rs  linux.rs  macos.rs  mod.rs  unix.rs  windows.rs
src-tauri/src/core/java/providers/: adoptium.rs
src-tauri/src/core/modpack/formats/: curseforge.rs
src-tauri/src/launcher/: launcher.rs  mod.rs
src-tauri/src/utils/: api.rs  mod.rs  path.rs  zip.rs
ui/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: App.svelte  app.css
ui/src/components/: ConfigEditorModal.svelte  HomeView.svelte  ModLoaderSelector.svelte  (+4 more)
(+13 files in other folders)
