[package]
name = "dropout"
version = "0.2.0-alpha.1"
edition = "2021"
authors = ["HsiangNianian"]
description = "The DropOut Minecraft Game Launcher"
license = "MIT"
repository = "https://github.com/HydroRoll-Team/DropOut"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "blocking", "stream", "multipart"] }
serde_json = "1.0.149"
tauri = { version = "2.9", features = [] }
tauri-plugin-shell = "2.3"
uuid = { version = "1.10.0", features = ["v3", "v4", "serde"] }
futures = "0.3"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
zip = "7.3.0"
flate2 = "1.0"
tar = "0.4"
dirs = "6.0"
serde_urlencoded = "0.7.1"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
bytes = "1.11.0"
chrono = "0.4"
regex = "1.12.2"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[package.metadata.deb]
depends = "libgtk-3-0"
section = "games"
assets = [
    ["target/release/dropout", "usr/bin/", "755"],
]
